<resources>
    <string name="app_name">Logistics</string>
    <string name="error_to_load_products">Erro ao buscar os produtos  :(</string>
    <string name="location_copied">Localização copiada!  :)</string>
    <string name="image_copied">Imagem copiada!  :)</string>
    <string name="code_copied">Código de barras copiado!  )</string>
    <string name="without_gps_permissions">Ops... sem permissão para acessar o GPS  :(</string>
    <string name="without_phone_permission">Falta permissão Telefone!  s</string>
    <string name="location_now">Localização atual </string>
    <string name="nome_do_remetente">Nome do remetente </string>
    <string name="nome_do_recebedor">Nome do recebedor</string>
    <string name="busca_localizacao_sucesso">A busca pela localização foi iniciada!</string>
    <string name="buscando_localizacao">Buscando a localização. Aguarde!</string>
    <string name="foto_da_assinatura">Foto da assinatura </string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="copiar_imagem">Copiar Imagem</string>
    <string name="copiar_localiza_o">Copiar Localização</string>
    <string name="obter_localiza_o">Obter localização</string>
    <string name="hint_quantidade">99</string>
    <string name="quantidade">Quantidade </string>
    <string name="hint_cod_barras">SKAJSajdkj13kj2323233</string>
    <string name="_10_04_2019">10/04/2019</string>
    <string name="data_de_recebimento">Data de recebimento </string>
    <string name="hint_remetente">Eloá Vitória</string>
    <string name="hint_recebedor">Bianca Rosa da Silva</string>
    <string name="hint_descricao">Playstation 4, SSD M.2</string>
    <string name="ir_para_entregas">Ir para entregas</string>
    <string name="no_data_to_copy">Não há nenhum dado para se copiado!  s</string>
    <string name="falha_ao_cadastrar_entrega">Falha ao cadastrar entrega!  s</string>
    <string name="Salvar">Salvar</string>
    <string name="alterar_entrega">Alterar dados da Entrega</string>
    <string name="cadastrar_entrega">Cadastrar nova Entrega</string>
    <string name="codigo_barras">Código de barras</string>
    <string name="read_code">Ler código</string>
    <string name="copy_code">Copiar código</string>
    <string name="remetente">Remetente</string>
    <string name="destinat_rio">Destinatário</string>
    <string name="descri_o_do_s_produto_s">Descrição do(s) produto(s)</string>
    <string name="assinatura_destinat_rio">Assinatura destinatário</string>
    <string name="local_de_entrega">Local de entrega</string>
    <string name="recebimento_date">Data de recebimento</string>
</resources>
