<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:padding="9dp"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/nome_do_remetente"
    />
    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_remetente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/hint_remetente" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/nome_do_recebedor"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_recebedor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/hint_recebedor" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="Descrição:"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/hint_descricao" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="Assinatura"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_assinatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Assinatura do recebedor" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="Local de entrega:"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="text"
            android:layout_marginRight="20dp"
            android:hint="Local da entrega" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/data_de_recebimento"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_dataRecebimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="date"
            android:layout_marginRight="20dp"
            android:hint="@string/_10_04_2019" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="Código de barras:"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_codBarras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:hint="@string/hint_cod_barras" />

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="20dp"
              android:layout_marginRight="20dp"
              android:text="@string/quantidade"/>

    <android.support.design.widget.TextInputEditText
            android:id="@+id/form_quantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:hint="@string/hint_quantidade" />

</LinearLayout>